--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '8.0.x' # эсвэл проектын version
+          dotnet-version: '6.0' # эсвэл проектын version
       - name: Restore dependencies
         run: dotnet restore HouseRentingSystem.sln
       - name: Build
