--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,19 +2,21 @@ name: unitTest
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["staging", "develop"]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '6.0' # эсвэл проектын version
+          dotnet-version: '8.0.x' # эсвэл проектын version
       - name: Restore dependencies
         run: dotnet restore HouseRentingSystem.sln
       - name: Build
         run: dotnet build HouseRentingSystem.sln --configuration Release --no-restore
       - name: Run Tests
+        run: dotnet test HouseRentingSystem.Tests/HouseRentingSystem.Tests.csproj
+      - name: Run Unit Tests
         run: dotnet test HouseRentingSystem.UnitTests/HouseRentingSystem.UnitTests.csproj
