--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,7 +2,7 @@ name: unitTest
 
 on:
   push:
-    branches: ["staging", "develop"]
+    branches: [ "develop"]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,5 +18,3 @@ jobs:
         run: dotnet build HouseRentingSystem.sln --configuration Release --no-restore
       - name: Run Tests
         run: dotnet test HouseRentingSystem.Tests/HouseRentingSystem.Tests.csproj
-      - name: Run Unit Tests
-        run: dotnet test HouseRentingSystem.UnitTests/HouseRentingSystem.UnitTests.csproj
